# writhub

./: .gitignore  CHANGELOG.rst  Makefile  README.rst  TODOS.md  pyproject.toml  pytest.ini  setup.py
examples/_published/assets_simple/: index.md
examples/_published/basetext/: index.md  index.txt
examples/_published/oneoff/: index.md
examples/_published/post/: index.md
examples/_published/post_messy_names/: index.md
examples/assets_simple/: 000-hello.md  index.md
examples/basetext/: 100-hello.txt  999-bye.txt
examples/oneoff/: index.md
examples/post/: 000-hello.md  010-goodbye.md  index.md
examples/post_messy_names/: 400-finale.md
examples/post_messy_names/200-stuff/: 301-alpha.md
tests/: test_foo_md.py  test_md_compilation.py  test_writhub.py
tests/samples/oneoff/: index.md
tests/samples/post/: 000-hello.md  index.md
tests/samples/post_messy_names/: 000-hello.md  200.md
tests/samples/post_messy_names/200-stuff/: 700-beta.md
tests/samples/post_w_assets/: 000-hello.md
tests/test_cli/: test_cli_file_options.py
tests/test_collater/: test_base_collater.py  test_md_collater.py
tests/test_publish/: test_publish_basic.py  test_publish_markdown.py  test_publish_target_sync_assets.py
tests/test_writhub_class/: test_writhub_class_init.py  test_writhub_content_list.py  test_writhub_content_list_ordering.py  test_writhub_init.py  test_writhub_outproject.py
writhub/: cli.py  errors.py  mylog.py  settings.py  writhub.py
writhub/collaters/: __init__.py  collater.py  md.py
writhub/console/: cli.py
writhub/foo/: md.py
